--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,20 @@ hs_err_pid*
 
 # cloud no nos
 application.properties
+
+# spock reports
+.html
+
+# maven files
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
